--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
               colors: {
                 clifford: '#da373d',
                 'btn-color': '#E76F51',
+                'bike-bg-color': 'rgba(231, 111, 81, 0.10)'
               }
             }
           }
@@ -41,17 +42,17 @@
                     <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
                       <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
                     </div>
-                    <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 text-base">
+                    <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 text-base text-[#000]">
                       <li><a>Home</a></li>
                       <li><a>Shop</a></li>
                       <li><a>News</a></li>
                       <li><a>Contact</a></li>
                     </ul>
                   </div>
-                  <a class="btn btn-ghost text-4xl">Biker Zone</a>
+                  <a class="btn btn-ghost text-3xl lg:text-4xl text-[#000]">Biker Zone</a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
-                  <ul class="menu menu-horizontal px-1 text-base">
+                  <ul class="menu menu-horizontal px-1 text-base text-[#000]">
                     <li><a>Home</a></li>
                     <li><a>Shop</a></li>
                     <li><a>News</a></li>
@@ -63,6 +64,77 @@
                 </div>
               </div>
         </nav>
+        <!-- Banner section -->
+        <div class="carousel w-full lg:h-[550px] bg-bike-bg-color">
+            <!-- slide1 -->
+            <div id="slide1" class="carousel-item relative w-full lg:h-[550px]">
+             <div class="flex flex-col lg:flex-row gap-20 p-4 lg:p-24">
+                <div class="space-y-7 flex-1">
+                    <h2 class="text-3xl lg:text-6xl font-bold">Ride-on R15 V4 <br>with Smile</h2>
+                    <p>Due to the tight supply situation for individual components.bikes may sometimes be delivered with deviating equipment.However, any alternative components used will be of a corresponding quality.</p>
+                    <button class="btn bg-btn-color text-[#FFF]">Purchase</button>
+                </div>
+                <div>
+                    <img src="images/slider/bike1.png" class="w-[320px] lg:w-[400px]" />
+                </div>
+             </div>
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide4" class="btn btn-circle">❮</a> 
+                <a href="#slide2" class="btn btn-circle">❯</a>
+              </div>
+            </div> 
+            <!-- slide2 -->
+            <div id="slide2" class="carousel-item relative w-full lg:h-[550px]">
+                <div class="flex flex-col lg:flex-row gap-20 p-4 lg:p-24">
+                    <div class="space-y-7 flex-1">
+                        <h2 class="text-3xl lg:text-6xl font-bold">Ride-on R15 V4 <br>with Smile</h2>
+                        <p>Due to the tight supply situation for individual components.bikes may sometimes be delivered with deviating equipment.However, any alternative components used will be of a corresponding quality.</p>
+                        <button class="btn bg-btn-color text-[#FFF]">Purchase</button>
+                    </div>
+                    <div>
+                        <img src="images/slider/bike2.png" class="w-[320px] lg:w-[400px]" />
+                    </div>
+                 </div>
+             
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide1" class="btn btn-circle">❮</a> 
+                <a href="#slide3" class="btn btn-circle">❯</a>
+              </div>
+            </div> 
+            <!-- slide 3 -->
+            <div id="slide3" class="carousel-item relative w-full g:h-[550px]">
+                <div class="flex flex-col lg:flex-row gap-20 p-4 lg:p-24">
+                    <div class="space-y-7 flex-1">
+                        <h2 class="text-3xl lg:text-6xl font-bold">Ride-on R15 V4 <br>with Smile</h2>
+                        <p>Due to the tight supply situation for individual components.bikes may sometimes be delivered with deviating equipment.However, any alternative components used will be of a corresponding .</p>
+                        <button class="btn bg-btn-color text-[#FFF]">Purchase</button>
+                    </div>
+                    <div>
+                        <img src="images/slider/bike3.png" class="w-[320px] lg:w-[400px]" />
+                    </div>
+                 </div>
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide2" class="btn btn-circle">❮</a> 
+                <a href="#slide4" class="btn btn-circle">❯</a>
+              </div>
+            </div> 
+            <div id="slide4" class="carousel-item relative w-full g:h-[550px]">
+                <div class="flex flex-col lg:flex-row gap-20 p-4 lg:p-24">
+                    <div class="space-y-7 flex-1">
+                        <h2 class="text-3xl lg:text-6xl font-bold">Ride-on R15 V4 <br>with Smile</h2>
+                        <p>Due to the tight supply situation for individual components.bikes may sometimes be delivered with deviating equipment.However, any alternative components used will be of a corresponding.</p>
+                        <button class="btn bg-btn-color text-[#FFF]">Purchase</button>
+                    </div>
+                    <div>
+                        <img src="images/slider/bike4.png" class="w-[320px] lg:w-[400px]" />
+                    </div>
+                 </div>
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide3" class="btn btn-circle">❮</a> 
+                <a href="#slide1" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+        </div>
     </header>
 
     <!-- main section -->
