--- a/index.html
+++ b/index.html
@@ -139,7 +139,49 @@
 
     <!-- main section -->
     <main class="md:container md:mx-auto"></main>
+    <!-- featured bike -->
+    <section>
 
+    </section>
+    <!-- lates news -->
+    <section class="my-24">
+        <h3 class="text-5xl font-semibold text-center mb-12">Latest Bikes</h3>
+        <div class="grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+            <!-- first card -->
+            <div class="card bg-base-100 shadow-xl">
+                <figure><img src="images/others/latest1.png" alt="Shoes" /></figure>
+                <div class="card-body">
+                  <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
+                  <p>The Parapera Aeras² is a powerful all-round race bike that embraces the trends in the aero segment: low-set seat stays, full integration, one-piece cockpit, D-shaped seat post, integrated seat clamp, Tubeless-Ready wheels, disc brakes, electric drivetrain.</p>
+                  <div class="card-actions">
+                    <button class="btn bg-btn-color text-[#FFF]">Read More</button>
+                  </div>
+                </div>
+              </div>
+              <!-- second card -->
+            <div class="card bg-base-100 shadow-xl">
+                <figure><img src="images/others/latest2.png" alt="Shoes" /></figure>
+                <div class="card-body">
+                  <h2 class="card-title text-3xl">Motorcycles & Scooters</h2>
+                  <p>The Parapera Aeras² is a powerful all-round race bike that embraces the trends in the aero segment: low-set seat stays, full integration, one-piece cockpit, D-shaped seat post, integrated seat clamp, Tubeless-Ready wheels, disc brakes, electric drivetrain.</p>
+                  <div class="card-actions">
+                    <button class="btn bg-btn-color text-[#FFF]">Read More</button>
+                  </div>
+                </div>
+              </div>
+              <!-- third card -->
+            <div class="card bg-base-100 shadow-xl">
+                <figure><img src="images/others/latest3.png" alt="Shoes" /></figure>
+                <div class="card-body">
+                  <h2 class="card-title text-3xl">2021 Honda CBR500R</h2>
+                  <p>The Parapera Aeras² is a powerful all-round race bike that embraces the trends in the aero segment: low-set seat stays, full integration, one-piece cockpit, D-shaped seat post, integrated seat clamp, Tubeless-Ready wheels, disc brakes, electric drivetrain.</p>
+                  <div class="card-actions">
+                    <button class="btn bg-btn-color text-[#FFF]">Read More</button>
+                  </div>
+                </div>
+              </div>
+        </div>
+    </section>
     <!-- footer section -->
     <footer></footer>
 </body>
