--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 clifford: '#da373d',
                 'btn-color': '#E76F51',
                 'bike-bg-color': 'rgba(231, 111, 81, 0.10)'
+               
               }
             }
           }
@@ -138,7 +139,7 @@
     </header>
 
     <!-- main section -->
-    <main class="md:container md:mx-auto"></main>
+    <main class="md:container md:mx-auto">
     <!-- featured bike -->
     <section>
 
@@ -182,6 +183,67 @@
               </div>
         </div>
     </section>
+    <section>
+      <!-- happy clients -->
+      <h3 class="text-5xl font-semibold text-center mb-12">Happy <span class="text-btn-color">Clients says</span></h3>
+      <div class="grid gap-10 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+        <!-- frist review -->
+        <div class="card bg-base-100 border border-gray-400 p-9">
+          <figure><img class="w-36" src="images/others/user-1.png" alt="Shoes" /></figure>
+          <div class="card-body">
+            <p>Your product always best in the whole world. Always buy your products</p>
+            <div class="rating justify-center">
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            </div>
+            <div class="text-center space-y-4 mt-4">
+             <h4 class="text-sm font-semibold text-info">Regina Miles</h4>
+             <p>Banker</p>
+            </div>
+          </div>
+        </div>
+        <!-- second review -->
+        <div class="card bg-base-100 border border-gray-400 p-9">
+          <figure><img class="w-36" src="images/others/user-2.png" alt="Shoes" /></figure>
+          <div class="card-body">
+            <p>Your product always best in the whole world. Always buy your products</p>
+            <div class="rating justify-center">
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            </div>
+            <div class="text-center space-y-4 mt-4">
+             <h4 class="text-sm font-semibold text-info">Regina Miles</h4>
+             <p>Banker</p>
+            </div>
+          </div>
+        </div>
+        <!-- Third review -->
+        <div class="card bg-base-100 border border-gray-400 p-9">
+          <figure><img class="w-36" src="images/others/user-3.png" alt="Shoes" /></figure>
+          <div class="card-body">
+            <p>Your product always best in the whole world. Always buy your products</p>
+            <div class="rating justify-center">
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            </div>
+            <div class="text-center space-y-4 mt-4">
+             <h4 class="text-sm font-semibold text-info">Regina Miles</h4>
+             <p>Banker</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
     <!-- footer section -->
     <footer></footer>
 </body>
