--- a/index.html
+++ b/index.html
@@ -293,6 +293,21 @@
     </section>
   </main>
     <!-- footer section -->
-    <footer></footer>
+    <footer class="footer p-10 bg-neutral text-neutral-content justify-around">
+      <aside>
+      <div>
+        <div>
+          <button>Download Now</button>
+        </div>
+      </div>
+      </aside> 
+      <nav>
+        <h1 class="footer-title">Get the app</h1> 
+        <div class="grid grid-col-1 gap-3">
+          <a><img class="w-36" src="images/others/android.png" alt=""></a>
+          <a><img class="w-36" src="images/others/ios.png" alt=""></a>
+        </div>
+      </nav>
+    </footer>
 </body>
 </html>
