--- a/index.html
+++ b/index.html
@@ -244,11 +244,11 @@
       </div>
     </section>
     <!-- FAQ -->
-    <section>
+    <section class="mb-8">
       <h3 class="text-5xl font-semibold text-center mt-24">Frequently Asked<span class="text-btn-color"> Questions</span></h3>
       <div class="hero mt-12 bg-white">
         <div class="hero-content flex-col lg:gap-24 lg:flex-row">
-          <img src="images/others/faq.png" class="w-3/4 lg:max-w-sm rounded-lg shadow-2xl" />
+          <img src="images/others/faq.png" class="w-3/4 lg:max-w-sm rounded-lg" />
           <div>
             <!-- frist question -->
             <div class="collapse collapse-arrow bg-white">
@@ -295,15 +295,25 @@
     <!-- footer section -->
     <footer class="footer p-10 bg-neutral text-neutral-content justify-around">
       <aside>
-      <div>
-        <div>
+      <p>
+        <div class=" flex gap-4 relative p-2">
           <button>Download Now</button>
+          <h4>License</h4>
         </div>
+        <nav class="flex  gap-4 p-2">
+          <a>About</a>
+          <a>Features</a>
+          <a>Pricing</a>
+          <a>Careers</a>
+          <a>Help</a>
+          <a>Privacy Policy</a>
+        </nav>
       </div>
+      <p class="pt-2">© 2020 bike. All rights reserved</p>
       </aside> 
       <nav>
         <h1 class="footer-title">Get the app</h1> 
-        <div class="grid grid-col-1 gap-3">
+        <div class="grid grid-col-1 gap-1">
           <a><img class="w-36" src="images/others/android.png" alt=""></a>
           <a><img class="w-36" src="images/others/ios.png" alt=""></a>
         </div>
