footer section done

--- a/index.html
+++ b/index.html
@@ -296,11 +296,11 @@
     <footer class="footer p-10 bg-neutral text-neutral-content justify-around">
       <aside>
       <p>
-        <div class=" flex gap-4 relative p-2">
+        <div class=" flex gap-4 p-2">
           <button>Download Now</button>
           <h4>License</h4>
         </div>
-        <nav class="flex  gap-4 p-2">
+        <nav class="flex gap-4 p-2">
           <a>About</a>
           <a>Features</a>
           <a>Pricing</a>
@@ -309,9 +309,9 @@
           <a>Privacy Policy</a>
         </nav>
       </div>
-      <p class="pt-2">© 2020 bike. All rights reserved</p>
+      <p class="pl-2">© 2020 bike. All rights reserved</p>
       </aside> 
-      <nav>
+      <nav class="pl-2 md:pl-0>
         <h1 class="footer-title">Get the app</h1> 
         <div class="grid grid-col-1 gap-1">
           <a><img class="w-36" src="images/others/android.png" alt=""></a>
